{
  "version": 4,
  "terraform_version": "1.5.2",
  "serial": 21,
  "lineage": "aab5de2a-0c10-aeee-a6eb-11b41b9ac5e2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "BIERES-EIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a8c3256182debfb5",
            "domain": "vpc",
            "id": "eipalloc-0a8c3256182debfb5",
            "network_border_group": "eu-west-3",
            "public_dns": "ec2-13-38-183-198.eu-west-3.compute.amazonaws.com",
            "public_ip": "13.38.183.198",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "BIERES-INSTANCE-ADMIN",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f61de2873e29e866",
            "arn": "arn:aws:ec2:eu-west-3:962615889483:instance/i-0411e168ee75a2629",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0411e168ee75a2629",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "TSIEUDAT-KEYSSH",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0bc5f66f1769963de",
            "private_dns": "ip-10-0-1-114.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.114",
            "public_ip": "35.180.87.76",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0b8b26567fa2f08a6",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0ab1ae63649a207fc"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a6eb2ee08acf79d4",
            "tags": {
              "Name": "BIERES-INSTANCE-ADMIN"
            },
            "tags_all": {
              "Name": "BIERES-INSTANCE-ADMIN"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ab1ae63649a207fc"
            ]
          },
          "dependencies": [
            "aws_security_group.BIERES-SG-ADMIN",
            "aws_subnet.BIERES-PUB-SUBNET",
            "aws_vpc.BIERES-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "BIERES-INSTANCE-PRIV1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "BIERES-INSTANCE-PRIV2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "BIERES-INSTANCE-PRIV3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "BIERES-INSTANCE-REVERSE",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "BIERES-IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:962615889483:internet-gateway/igw-0a840ce83a7580f17",
            "id": "igw-0a840ce83a7580f17",
            "owner_id": "962615889483"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "BIERES-NAT-GTW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a8c3256182debfb5",
            "association_id": "eipassoc-08d136c2a43c739b1",
            "connectivity_type": "public",
            "id": "nat-0fd9ece4e18af7ac3",
            "network_interface_id": "eni-00f1673d30ffb130a",
            "private_ip": "10.0.1.200",
            "public_ip": "13.38.183.198",
            "subnet_id": "subnet-0a6eb2ee08acf79d4",
            "tags": {
              "Name": "BIERES-NAT-GTW"
            },
            "tags_all": {
              "Name": "BIERES-NAT-GTW"
            }
          },
          "dependencies": [
            "aws_eip.BIERES-EIP",
            "aws_internet_gateway.BIERES-IGW",
            "aws_subnet.BIERES-PUB-SUBNET",
            "aws_vpc.BIERES-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "BIERES-ROUTE-DEFAULT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0a840ce83a7580f17",
            "id": "r-rtb-03e3059254bcf929f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03e3059254bcf929f",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.BIERES-IGW",
            "aws_internet_gateway_attachment.BIERES-IGW-ATTACHMENT",
            "aws_vpc.BIERES-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "BIERES-ROUTE-PRIV",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:962615889483:route-table/rtb-031e7056047069986",
            "id": "rtb-031e7056047069986",
            "owner_id": "962615889483",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0fd9ece4e18af7ac3",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "BIERES-ROUTE-PRIV"
            },
            "tags_all": {
              "Name": "BIERES-ROUTE-PRIV"
            },
            "timeouts": null,
            "vpc_id": "vpc-0246cee33e05aa9d8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.BIERES-EIP",
            "aws_internet_gateway.BIERES-IGW",
            "aws_nat_gateway.BIERES-NAT-GTW",
            "aws_subnet.BIERES-PUB-SUBNET",
            "aws_vpc.BIERES-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "BIERES-ROUTE-PUB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:962615889483:route-table/rtb-014709b82e8d1ed7c",
            "id": "rtb-014709b82e8d1ed7c",
            "owner_id": "962615889483",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a840ce83a7580f17",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "BIERES-ROUTE1"
            },
            "tags_all": {
              "Name": "BIERES-ROUTE1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0246cee33e05aa9d8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.BIERES-IGW",
            "aws_vpc.BIERES-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "BIERES-RTB-ASSOC1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e4877fd6d0d0d50e",
            "route_table_id": "rtb-031e7056047069986",
            "subnet_id": "subnet-0055d00907f17646d"
          },
          "dependencies": [
            "aws_eip.BIERES-EIP",
            "aws_internet_gateway.BIERES-IGW",
            "aws_nat_gateway.BIERES-NAT-GTW",
            "aws_route_table.BIERES-ROUTE-PRIV",
            "aws_subnet.BIERES-PRIV-SUBNET1",
            "aws_subnet.BIERES-PUB-SUBNET",
            "aws_vpc.BIERES-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "BIERES-RTB-ASSOC2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0de039336df94ef42",
            "route_table_id": "rtb-031e7056047069986",
            "subnet_id": "subnet-0acaa2322a2880b46"
          },
          "dependencies": [
            "aws_eip.BIERES-EIP",
            "aws_internet_gateway.BIERES-IGW",
            "aws_nat_gateway.BIERES-NAT-GTW",
            "aws_route_table.BIERES-ROUTE-PRIV",
            "aws_subnet.BIERES-PRIV-SUBNET2",
            "aws_subnet.BIERES-PUB-SUBNET",
            "aws_vpc.BIERES-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "BIERES-RTB-ASSOC3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ccbe44bdab9f94e9",
            "route_table_id": "rtb-031e7056047069986",
            "subnet_id": "subnet-00556e2493cf6a875"
          },
          "dependencies": [
            "aws_eip.BIERES-EIP",
            "aws_internet_gateway.BIERES-IGW",
            "aws_nat_gateway.BIERES-NAT-GTW",
            "aws_route_table.BIERES-ROUTE-PRIV",
            "aws_subnet.BIERES-PRIV-SUBNET3",
            "aws_subnet.BIERES-PUB-SUBNET",
            "aws_vpc.BIERES-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "BIERES-SG-ADMIN",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:962615889483:security-group/sg-0ab1ae63649a207fc",
            "description": "BIERES-SG-ADMIN",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ab1ae63649a207fc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "BIERES-SG1-ALLOW-SSH-FROM-EXT",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "BIERES-SG-ADMIN",
            "name_prefix": "",
            "owner_id": "962615889483",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "BIERES-SG-ADMIN"
            },
            "tags_all": {
              "Name": "BIERES-SG-ADMIN"
            },
            "timeouts": null,
            "vpc_id": "vpc-0246cee33e05aa9d8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.BIERES-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "BIERES-SG-PRIV-WEB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:962615889483:security-group/sg-05fe4132253078d7e",
            "description": "BIERES-SG-PRIV-WEB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05fe4132253078d7e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "ALLOW-SSH-FROM-ADMIN-TO-PRIV",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ab1ae63649a207fc"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "BIERES-SG-ALLOW-WEB-TO-REVERSE",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0aa853f30bea08e51"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "BIERES-SG-PRIV-WEB",
            "name_prefix": "",
            "owner_id": "962615889483",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "BIERES-SG-PRIV-WEB"
            },
            "tags_all": {
              "Name": "BIERES-SG-PRIV-WEB"
            },
            "timeouts": null,
            "vpc_id": "vpc-0246cee33e05aa9d8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.BIERES-SG-ADMIN",
            "aws_security_group.BIERES-SG-REVERSE",
            "aws_vpc.BIERES-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "BIERES-SG-REVERSE",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:962615889483:security-group/sg-0aa853f30bea08e51",
            "description": "BIERES-SG-REVERSE",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0aa853f30bea08e51",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "BIERES-SG-ALLOW-WEB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "BIERES-SG-REVERSE-ALLOW-SSH-FROM-ADMIN",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ab1ae63649a207fc"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "BIERES-SG1",
            "name_prefix": "",
            "owner_id": "962615889483",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "BIERES-SG-REVERSE"
            },
            "tags_all": {
              "Name": "BIERES-SG-REVERSE"
            },
            "timeouts": null,
            "vpc_id": "vpc-0246cee33e05aa9d8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.BIERES-SG-ADMIN",
            "aws_vpc.BIERES-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "BIERES-PRIV-SUBNET1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:962615889483:subnet/subnet-0055d00907f17646d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0055d00907f17646d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "962615889483",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "BIERES-PRIV-SUBNET1"
            },
            "tags_all": {
              "Name": "BIERES-PRIV-SUBNET1"
            },
            "vpc_id": "vpc-0246cee33e05aa9d8"
          },
          "dependencies": [
            "aws_vpc.BIERES-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "BIERES-PRIV-SUBNET2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:962615889483:subnet/subnet-0acaa2322a2880b46",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0acaa2322a2880b46",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "962615889483",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "BIERES-PRIV-SUBNET2"
            },
            "tags_all": {
              "Name": "BIERES-PRIV-SUBNET2"
            },
            "vpc_id": "vpc-0246cee33e05aa9d8"
          },
          "dependencies": [
            "aws_vpc.BIERES-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "BIERES-PRIV-SUBNET3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:962615889483:subnet/subnet-00556e2493cf6a875",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3c",
            "availability_zone_id": "euw3-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00556e2493cf6a875",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "962615889483",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "BIERES-PRIV-SUBNET3"
            },
            "tags_all": {
              "Name": "BIERES-PRIV-SUBNET3"
            },
            "vpc_id": "vpc-0246cee33e05aa9d8"
          },
          "dependencies": [
            "aws_vpc.BIERES-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "BIERES-PUB-SUBNET",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:962615889483:subnet/subnet-0a6eb2ee08acf79d4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3c",
            "availability_zone_id": "euw3-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a6eb2ee08acf79d4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "962615889483",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "BIERES-PUB-SUBNET"
            },
            "tags_all": {
              "Name": "BIERES-PUB-SUBNET"
            },
            "vpc_id": "vpc-0246cee33e05aa9d8"
          },
          "dependencies": [
            "aws_vpc.BIERES-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "BIERES-VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:962615889483:vpc/vpc-0246cee33e05aa9d8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0bfa1eea0b7259d62",
            "default_route_table_id": "rtb-03e3059254bcf929f",
            "default_security_group_id": "sg-091acc9fbace652c6",
            "dhcp_options_id": "dopt-040e3fc8fa1640715",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0246cee33e05aa9d8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03e3059254bcf929f",
            "owner_id": "962615889483",
            "tags": {
              "Name": "BIERES-VPC"
            },
            "tags_all": {
              "Name": "BIERES-VPC"
            }
          }
        }
      ]
    }
  ]
}